<?xml version="1.0" encoding="utf-8"?>

<GridLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:columnCount="1"
    android:rowCount="3">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:columnCount="2"
        android:rowCount="2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:contentDescription="@string/image_view_adding" />

        <Button
            android:layout_width="123dp"
            android:layout_height="63dp"
            android:text="@string/buttin_photo_add"
            android:id="@+id/button"
            android:layout_column="1"
            android:layout_row="0" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_column="1"
            android:layout_row="1" />
    </GridLayout>

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:columnCount="2"
        android:rowCount="3">

        <TextView
            android:layout_width="81dp"
            android:layout_height="38dp"
            android:text="@string/textView_name_add"
            android:id="@+id/textView"
            android:textSize="24sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_column="1"
            android:layout_row="0"
            android:editable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView"
            android:id="@+id/textView2"
            android:layout_column="0"
            android:layout_row="1"
            android:textSize="24sp" />

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_column="1"
            android:layout_row="1"
            android:columnCount="4"
            android:rowCount="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_minTemp_add"
                android:id="@+id/textView3"
                android:layout_column="0"
                android:layout_row="0"
                android:textSize="24sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText2"
                android:layout_column="1"
                android:layout_row="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_maxTemp_add"
                android:id="@+id/textView4"
                android:layout_column="2"
                android:layout_row="0"
                android:textSize="24sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText3"
                android:layout_row="0"
                android:layout_column="3" />
        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_descr_add"
            android:id="@+id/textView5"
            android:layout_column="0"
            android:layout_row="2"
            android:textSize="24sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText4"
            android:layout_column="1" />
    </GridLayout>
</GridLayout>