<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="?android:attr/activatedBackgroundIndicator" android:columnCount="2"
                android:rowCount="1">
    <ImageView
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:padding="1dp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/washing"/>
    <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:columnCount="2" android:rowCount="3">
        <TextView
                android:id="@+id/namelabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edges_small"
                android:text="@string/namelabel" />
        <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edges_small"
                android:layout_toRightOf="@+id/namelabel" />
        <TextView
                android:id="@+id/matiriallabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/namelabel"
                android:background="@drawable/edges_small"
                android:text="@string/materiallabel" />
        <TextView
                android:id="@+id/matirial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                 android:background="@drawable/edges_small"
                android:layout_toRightOf="@+id/matiriallabel" />
        <TextView
                android:id="@+id/washinglabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edges_small"
                android:layout_below="@+id/matiriallabel"
                android:text="@string/washinglabel" />
        <TextView
                android:id="@+id/washing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/washinglabel"
                 android:background="@drawable/edges_small"
                android:layout_toRightOf="@+id/washinglabel" />
    </GridLayout>

</GridLayout>